--- a/src/output.css
+++ b/src/output.css
@@ -41,6 +41,11 @@ body {
   display: flex;
   flex-direction: column;
 }
+@media screen and (max-width: 1249px) {
+  .bullet-points-container {
+    width: 210px;
+  }
+}
 .bullet-points-container .bullet-point-container {
   display: flex;
   flex-direction: row;
@@ -131,7 +136,7 @@ body {
   }
   #schools-container .school-container p {
     margin: unset;
-    font-size: 14px;
+    font-size: large;
     text-align: center;
     color: white;
     word-wrap: none;
@@ -163,7 +168,9 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     margin: 12px 0;
+    width: 210px;
   }
 }
 @media screen and (min-width: 1250px) {
@@ -199,7 +206,7 @@ body {
 @media screen and (max-width: 1249px) {
   #skills-divider {
     align-self: center;
-    width: 80%;
+    width: 200px;
     height: 2px;
     border-top: solid orange;
     margin: 12px 0 0;
